--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
 
-		<script src="http://jillelaine.github.io/store.js" type="text/javascript"></script>
+		<script src="https://raw.githubusercontent.com/marcuswestin/store.js/master/store.min.js" type="text/javascript"></script>
 		<script src="http://jillelaine.github.io/jquery-idleTimeout.js" type="text/javascript"></script>
 
 		<script type="text/javascript" charset="utf-8">
       $(document).ready(function(){
         $(document).idleTimeout({
-          idleTimeLimit: 1200000,       // 'No activity' time limit in milliseconds. 1200000 = 20 Minutes
+          //idleTimeLimit: 1200000,       // 'No activity' time limit in milliseconds. 1200000 = 20 Minutes
+          idleTimeLimit: 45000,         // 45 seconds
           dialogDisplayLimit: 180000,   // Time to display the warning dialog before redirect (and optional callback) in milliseconds. 180000 = 3 Minutes
-          redirectUrl: '/logout',       // redirect to this url
+          redirectUrl: 'http://jillelaine.github.io/',       // redirect to this url
 
           // optional custom callback to perform before redirect
           customCallback: false,       // set to false for no customCallback
@@ -27,15 +28,15 @@
           // configure which activity events to detect
           // http://www.quirksmode.org/dom/events/
           // https://developer.mozilla.org/en-US/docs/Web/Reference/Events
-          activityEvents: 'click keypress scroll wheel mousewheel mousemove', // separate each event with a space
+          activityEvents: 'click keypress scroll wheel mousewheel', // separate each event with a space - mousemove has been removed
 
           //dialog box configuration
           dialogTitle: 'Session Expiration Warning',
           dialogText: 'Because you have been inactive, your session is about to expire.',
 
           // server-side session keep-alive timer & url
-          sessionKeepAliveTimer: 60000, // Ping the server at this interval in milliseconds. 60000 = 1 Minute
-          // sessionKeepAliveTimer: false, // Set to false to disable pings.
+          //sessionKeepAliveTimer: 60000, // Ping the server at this interval in milliseconds. 60000 = 1 Minute
+          sessionKeepAliveTimer: false, // Set to false to disable pings.
           sessionKeepAliveUrl: '/',  // url to ping
         });
       });
@@ -45,7 +46,49 @@
 	<body>
 	<h1>idleTimeout Testing Page</h1>
 
-	  This is just a test!
+		<p>The idle time limit, 'idleTimeLimit', is set to 45 seconds (45000 milliseconds) for this demonstration.</p>
+	  <p>Activity events to detect, 'activityEvents', are set to 'click keypress scroll wheel mousewheel'. The event, 'mousemove', has been removed for this demonstration.</p>
+	  <p>If no activity events are detected within the idle time limit of 45 seconds, the warning dialog will appear.</p>
+	  <p>The warning dialog display limit, 'dialogDisplayLimit', is set to 3 minutes (180000 milliseconds). If no activity is detected within the 'dialogDisplayLimit', the page will redirect.</p>
+
+	  <p></p>
+
+	  <p>
+	  <code>
+	  	<script type="text/javascript" charset="utf-8">
+      $(document).ready(function(){
+        $(document).idleTimeout({
+          //idleTimeLimit: 1200000,       // 'No activity' time limit in milliseconds. 1200000 = 20 Minutes
+          idleTimeLimit: 45000,         // 45 seconds
+          dialogDisplayLimit: 180000,   // Time to display the warning dialog before redirect (and optional callback) in milliseconds. 180000 = 3 Minutes
+          redirectUrl: 'http://jillelaine.github.io/',       // redirect to this url
+
+          // optional custom callback to perform before redirect
+          customCallback: false,       // set to false for no customCallback
+          // customCallback:    function() {    // define optional custom js function
+              // perform custom action before logout
+          // },
+
+          // configure which activity events to detect
+          // http://www.quirksmode.org/dom/events/
+          // https://developer.mozilla.org/en-US/docs/Web/Reference/Events
+          activityEvents: 'click keypress scroll wheel mousewheel', // separate each event with a space - mousemove has been removed
+
+          //dialog box configuration
+          dialogTitle: 'Session Expiration Warning',
+          dialogText: 'Because you have been inactive, your session is about to expire.',
+
+          // server-side session keep-alive timer & url
+          //sessionKeepAliveTimer: 60000, // Ping the server at this interval in milliseconds. 60000 = 1 Minute
+          sessionKeepAliveTimer: false, // Set to false to disable pings.
+          sessionKeepAliveUrl: '/',  // url to ping
+        });
+      });
+		</script>
+	  </code>
+	  </p>
+
+
 
 	</body>
 </html>
