--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
       <div class="main_content">
         <h2>Code Page - <a href="https://github.com/JillElaine/jquery-idleTimeout">https://github.com/JillElaine/jquery-idleTimeout</a></h2>
 
+        <p>To see functionality, you must not press any keys, click your mouse or scroll your mousewheel for 30 seconds.</p>
+
         <h3>Functions across multiple windows and tabs within the same domain</h3>
         <strong>Try it! Open multiple browser windows and tabs of this same page.</strong>
         <ul>
