--- a/index.html
+++ b/index.html
@@ -1,57 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>JillElaine jquery-idleTimeout - Demo Page</title>
 
-		<style>
-		  a {
-        text-decoration: none;
-        font-weight:bold;
-      }
-      a:link {
-        color: #AB4A0E;
-      }
-      a:visited {
-        color: #9F3A03;
-      }
-      a:hover, a:active, a:focus {
-        color: #E1610C;
-      }
-      body {
-        background-color: #444444;
-        padding: 0;
-      }
-      .main_banner {
-        background-color: #AB4A0E;
-        border: 1px solid #FFCC88;
-        color: #FFEEBB;
-        margin: 5px;
-        padding: 10px;
-      }
-      .main_content {
-        background-color: #FCFCF0;
-        border: 1px solid #AAAAAA;
-        color: #000000;
-        font-family: Verdana;
-        font-size: 0.8em;
-        margin: 5px;
-        padding: 10px;
-      }
-      .main_content h1 {
-        font-family: "Trebuchet MS",Helvetica,sans-serif;
-        font-size: 2.5em;
-        margin: 0;
-      }
-      .main_content p {
-        margin-left: 10px;
-      }
-		</style>
+		<link type="text/css" rel="stylesheet" href="http://jillelaine.github.io/main.css"/>
+		<link type="text/css" rel="stylesheet" href="http://jillelaine.github.io/jquery-ui-1.8.21.custom.css"/>
 
-		<link type="text/css" rel="stylesheet" href="http://jillelaine.github.io/jquery-ui-1.8.21.custom.css"  />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
 		<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script>
-
 		<script src="https://raw.githubusercontent.com/marcuswestin/store.js/master/store.min.js" type="text/javascript"></script>
 		<script src="http://jillelaine.github.io/jquery-idleTimeout.js" type="text/javascript"></script>
 
@@ -66,8 +24,8 @@
         });
       });
 		</script>
-
 	</head>
+
 	<body>
     <div>
       <div class="main_banner">
@@ -77,10 +35,12 @@
       <div class="main_content">
         <h2>Code Page - <a href="https://github.com/JillElaine/jquery-idleTimeout">https://github.com/JillElaine/jquery-idleTimeout</a></h2>
 
-        <p>To see functionality, you must not press any keys, click your mouse or scroll your mousewheel for 30 seconds.</p>
+        <p>To see functionality, do not press any keys, click your mouse or scroll your mousewheel for 30 seconds.</p>
 
         <h3>Functions across multiple windows and tabs within the same domain</h3>
-        <strong>Try it! Open multiple browser windows and tabs of this same page.</strong>
+
+        <p><a href="http://jillelaine.github.io" target="_blank">Try it! Click here to open another browser window/tab of this page.</a></p>
+
         <ul>
           <li>If a window or tab is logged out, all other windows and tabs will log out too.</li>
           <li>If warning dialog appears on one window/tab, a warning dialog appears on all other 'same domain' windows/tabs too.</li>
@@ -101,14 +61,24 @@
         <h3>Functionality & Features</h3>
         <ul>
           <li>Works across multiple windows and tabs within the same domain <strong>thanks to Marcus Westin's store.js.</strong></li>
+            <ul>
+              <li>Uses localStorage, globalStorage and userData behavior to 'communicate' across multiple browser windows/tabs without cookies or flash!</li>
+            </ul>
           <li>If no activity events are detected on any 'same domain' windows/tabs within the 'idleTimeLimit', the warning dialog will appear will appear on all 'same domain' windows/tabs.</li>
+            <ul>
+              <li>Activy events are configurable: clicks, keypresses, scrolls, and/or mouse movement are options.</li>
+              <li><a href="http://www.quirksmode.org/dom/events/">http://www.quirksmode.org/dom/events/</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/Reference/Events">https://developer.mozilla.org/en-US/docs/Web/Reference/Events</a></li>
+            </ul>
           <li><strong>The browser title changes on all 'same domain' windows/tabs when the warning dialog appears, and reverts back to the original title(s) if the warning dialog is dismissed.</strong></li>
           <li>If neither button on the warning dialog box is clicked within the 'dialogDisplayLimit', all 'same domain' windows/tabs will redirect to the 'redirectUrl'.</li>
         </ul>
 
         <h3>Optional Functionality</h3>
+
         <p>If user manually logs out (without use of the idleTimer), you can force all 'same domain' windows/tabs to redirect to the 'redirectUrl' page by
-        adding a small snippet of javascript to the user's 'redirectUrl' page. Note that the <strong>store.js</strong> must be available on the 'redirectUrl' page.</p>
+        adding a small snippet of javascript to the user's 'redirectUrl' page.
+        Note that the <strong>all required scripts</strong> must be available on the 'redirectUrl' page for this to work.</p>
 
         <p>Optional Script</p>
         <p>
@@ -120,24 +90,19 @@
                 <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;alert('Dependent file missing. Please see: https://github.com/marcuswestin/store.js');
               <br />&nbsp;&nbsp;&nbsp;&nbsp;}
             <br />&nbsp;&nbsp;});
-          &lt;/script&gt;
+          <br />&lt;/script&gt;
         </p>
 
         <h3>The Demo Runtime Configuration</h3>
         <ul>
           <li>The idle time limit, 'idleTimeLimit', is set to 30 seconds (30000 milliseconds).</li>
-          <li>Activity events to detect, 'activityEvents', are set to 'click keypress scroll wheel mousewheel'. More information:</li>
-            <ul>
-              <li><a href="http://www.quirksmode.org/dom/events/">http://www.quirksmode.org/dom/events/</a></li>
-              <li><a href="https://developer.mozilla.org/en-US/docs/Web/Reference/Events">https://developer.mozilla.org/en-US/docs/Web/Reference/Events</a></li>
-            </ul>
+          <li>Activity events to detect, 'activityEvents', are set to 'click keypress scroll wheel mousewheel'.</li>
           <li>The warning dialog display limit, 'dialogDisplayLimit', is set to 30 seconds.</li>
           <li>The redirect page, 'redirectUrl', is set to https://github.com/JillElaine/jquery-idleTimeout.</li>
           <li>Session keep alive pings have been disabled.</li>
         </ul>
 
         <h3>The Demo Runtime Configuration Script</h3>
-
         <p>
           &lt;script type="text/javascript" charset="utf-8"&gt;
           <br />&nbsp;&nbsp;$(document).ready(function(){
