--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
 
         <h3>Optional Functionality</h3>
 
-        <p>If user manually logs out (without use of the idleTimer), you can force all 'same domain' windows/tabs to redirect to the 'redirectUrl' page by
+        <p>If user manually logs out with a click of your site's 'Logout' button and not with use of the idleTimer function,
+        you can force all 'same domain' windows/tabs to redirect to your 'redirectUrl' page by
         adding a small snippet of javascript to the user's 'redirectUrl' page.
-        Note that the <strong>all required scripts</strong> must be available on the 'redirectUrl' page for this to work.</p>
+        Note: <strong>all required scripts</strong> must be available on the 'redirectUrl' page for this to work.</p>
 
-        <p>Optional Script</p>
+        <p><strong>Optional 'Manual Logout' Script</strong></p>
         <p>
           &lt;script type="text/javascript"&gt;
             <br />&nbsp;&nbsp;$(document).ready(function(){
