--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <h3>Requirements</h3>
         <ul>
-          <li>Marcus Westin's store.js version 1.3.4+ is required. <a href="https://github.com/marcuswestin/store.js">https://github.com/marcuswestin/store.js</a></li>
+          <li>Marcus Westin's store.js version 1.3.4+ is required. <a href="https://github.com/marcuswestin/store.js" target="_blank">https://github.com/marcuswestin/store.js</a></li>
           <li>JQuery version 1.7+ and JQuery UI are required. You can load Google's JQuery API. Put these statements in your page's 'head'</li>
             <ul>
               <li>&lt;script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"&gt;&lt;/script&gt;</li>
@@ -66,9 +66,9 @@
             </ul>
           <li>If no activity events are detected on any 'same domain' windows/tabs within the 'idleTimeLimit', the warning dialog will appear will appear on all 'same domain' windows/tabs.</li>
             <ul>
-              <li>Activy events are configurable: clicks, keypresses, scrolls, and/or mouse movement are options.</li>
-              <li><a href="http://www.quirksmode.org/dom/events/">http://www.quirksmode.org/dom/events/</a></li>
-              <li><a href="https://developer.mozilla.org/en-US/docs/Web/Reference/Events">https://developer.mozilla.org/en-US/docs/Web/Reference/Events</a></li>
+              <li>Activity events to detect are configurable: clicks, keypresses, scrolls, and/or mouse movements are options.</li>
+              <li><a href="http://www.quirksmode.org/dom/events/" target="_blank">http://www.quirksmode.org/dom/events/</a></li>
+              <li><a href="https://developer.mozilla.org/en-US/docs/Web/Reference/Events" target="_blank">https://developer.mozilla.org/en-US/docs/Web/Reference/Events</a></li>
             </ul>
           <li><strong>The browser title changes on all 'same domain' windows/tabs when the warning dialog appears, and reverts back to the original title(s) if the warning dialog is dismissed.</strong></li>
           <li>If neither button on the warning dialog box is clicked within the 'dialogDisplayLimit', all 'same domain' windows/tabs will redirect to the 'redirectUrl'.</li>
