Add countdown timer information to index.html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
               <li><a href="https://developer.mozilla.org/en-US/docs/Web/Reference/Events" target="_blank">https://developer.mozilla.org/en-US/docs/Web/Reference/Events</a></li>
             </ul>
           <li><strong>The browser title changes on all 'same domain' windows/tabs when the warning dialog appears, and reverts back to the original title(s) if the warning dialog is dismissed.</strong></li>
+          <li>Includes 'time remaining to logout' countdown timer on warning dialog</li>
           <li>If neither button on the warning dialog box is clicked within the 'dialogDisplayLimit', all 'same domain' windows/tabs will redirect to the 'redirectUrl'.</li>
         </ul>
 
